--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "virtual-dom": "~1.3.0",
     "watchify": "^2.2.1",
     "browserify": "~6.3.4",
-    "vdom-virtualize": "0.0.6"
+    "vdom-virtualize": "0.0.6",
+    "udc": "~1.0.1"
   }
 }
