--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "watchify": "^2.2.1",
     "browserify": "~6.3.4",
     "vdom-virtualize": "0.0.6",
-    "udc": "~1.0.1"
+    "mustache": "~1.0.0"
   }
 }
