--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "watchify main.js -o build/main.js --verbose",
-    "postinstall": "./node_modules/browserify/bin/cmd.js main.js -o build/main.js"
+    "watch": "watchify -t [ hbsfy -e html ] main.js -o build/main.js --verbose",
+    "postinstall": "./node_modules/browserify/bin/cmd.js -t [ hbsfy -e html ] main.js -o build/main.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,8 +13,9 @@
     "virtual-dom": "~1.3.0",
     "watchify": "^2.2.1",
     "browserify": "~6.3.4",
+    "hbsfy": "^2.2.1",
     "vdom-virtualize": "0.0.6",
-    "mustache": "~1.0.0",
+    "handlebars": "^2",
     "forever": "~0.13.0"
   }
 }
