--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hbsfy": "^2.2.1",
     "vdom-virtualize": "0.0.6",
     "handlebars": "^2",
-    "forever": "~0.13.0"
+    "forever": "~0.13.0",
+    "fastclick": "~1.0.6"
   }
 }
